# pyguide

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  benchmark.py  benchmark_filtering.py  benchmark_opt.py  benchmark_regression.py  debug_digits_regression.py  debug_scoring.py  prof.data  prototype_viz.py  prototype_viz_2.py  prototype_viz_3.py  pyproject.toml  verify.py  verify_boosting.py  verify_boosting_classifier.py  verify_categorical.py  verify_ensemble.py  verify_guide_scoring.py  verify_importance.py  verify_interaction_importance.py  verify_max_features.py  verify_metadata.py  verify_missing.py  verify_pruning_path.py  verify_strict_importance.py  verify_triplet.py  verify_viz.py
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: main_benchmark.py  profile_data.prof  rust_vs_python.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/advanced_handling_20251229/: metadata.json
conductor/archive/benchmarking_optimization_20260103/: metadata.json  spec.md
conductor/archive/core_classifier_20251228/: metadata.json  plan.md
conductor/archive/docs_examples_20251230/: metadata.json  plan.md  spec.md
conductor/archive/docs_update_20260104/: metadata.json  spec.md
conductor/archive/ensembles_random_forest_20260103/: metadata.json  spec.md
conductor/archive/interaction_refinement_20251230/: plan.md  spec.md
conductor/archive/packaging_publishing_20251230/: metadata.json  plan.md  spec.md
conductor/archive/parity_importance_20251230/: metadata.json  spec.md
conductor/archive/performance_optimization_rust_20260104/: metadata.json  plan.md  spec.md
conductor/archive/pruning_viz_opt_20251229/: plan.md  spec.md
conductor/archive/regressor_20251228/: spec.md
conductor/archive/strict_guide_importance_20260103/: metadata.json
conductor/archive/variable_importance_mode_20260103/: spec.md
conductor/tracks/advanced_handling_20251229/: plan.md  spec.md
conductor/tracks/benchmarking_optimization_20260103/: plan.md
conductor/tracks/core_classifier_20251228/: plan.md  spec.md
conductor/tracks/docs_examples_20251230/: plan.md
conductor/tracks/docs_update_20260104/: plan.md
conductor/tracks/ensembles_random_forest_20260103/: plan.md
conductor/tracks/gradient_boosting_20260104/: metadata.json  plan.md  spec.md
conductor/tracks/interaction_refinement_20251230/: metadata.json  plan.md
conductor/tracks/packaging_publishing_20251230/: plan.md
conductor/tracks/parity_importance_20251230/: plan.md
conductor/tracks/performance_optimization_rust_20260104/: plan.md
conductor/tracks/pruning_viz_opt_20251229/: metadata.json  plan.md
conductor/tracks/regressor_20251228/: metadata.json  plan.md
conductor/tracks/strict_guide_importance_20260103/: plan.md  spec.md
conductor/tracks/variable_importance_mode_20260103/: metadata.json  plan.md
docs/: interactions.md
docs/source/: conf.py  ensembles.md  index.rst  modules.rst  pyguide.rst  user_guide.md
docs/source/examples/: classification.ipynb  regression.ipynb  strict_importance.ipynb
examples/: basic_usage.py  bias_demo.py  importance_demo.py  interaction_demo.py  strict_importance_demo.py
resources/: PLAN.md
src/: lib.rs
src/pyguide/: __init__.py  boosting.py  classifier.py  ensemble.py  interactions.py  node.py  regressor.py  selection.py  splitting.py  stats.py  visualization.py
tests/: test_boosting.py  test_boosting_classifier.py  test_classifier.py  test_diagnostics.py  test_ensemble.py  test_guide_scoring.py  test_high_cardinality.py  test_importance.py  test_importance_metadata.py  test_interaction.py  test_interaction_constraints.py  test_interaction_depth.py  test_interaction_importance.py  test_max_features.py  test_missing_values.py  test_node.py  test_node_metadata.py  test_prediction.py  test_pruning.py  test_pruning_path.py  test_pyguide.py  test_regression_selection.py  test_regressor.py  test_regressor_recursive.py  test_rust_fallback.py  test_sklearn_compat.py  test_split_optimization.py  test_sse_splitting.py  test_stats.py  test_strict_importance.py  test_structure.py  test_tree_growth.py  test_variable_selection.py  test_visualization.py
