[package]
name = "pyguide"
version = "0.1.0"
edition = "2021"
authors = ["Brandon Greenwell <greenwell.brandon@gmail.com>"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
statrs = "0.17"
ordered-float = "5.1.0"
