[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyguide"
version = "0.1.0"
description = "A scikit-learn compatible implementation of the GUIDE (Generalized, Unbiased, Interaction Detection and Estimation) algorithm."
readme = "README.md"
authors = [
    { name = "Brandon Greenwell", email = "greenwell.brandon@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/bgreenwell/pyguide"
Repository = "https://github.com/bgreenwell/pyguide"
Documentation = "https://github.com/bgreenwell/pyguide"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "sphinx>=8.2.3",
]

[tool.pytest.ini_options]
addopts = "--cov=src/pyguide --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/pyguide"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
